--- a/quick-start/docker-compose.yml
+++ b/quick-start/docker-compose.yml
@@ -425,27 +425,34 @@ services:
     ports:
       - "8085:8085"
     environment:
-      - APP_NAME=inferflow
-      - APP_ENV=local
-      - APP_LOG_LEVEL=DEBUG
-      - APP_PORT=8085
       - APP_GC_PERCENTAGE=1
-      - METRICS_SAMPLING_RATE=1
-      - ETCD_WATCHER_ENABLED=true
       - ETCD_SERVER=http://etcd:2379
-      - EXTERNAL_SERVICE_ONFS_FSHOST=onfs-api-server
-      - EXTERNAL_SERVICE_ONFS_FSPORT=8089
-      - EXTERNAL_SERVICE_ONFS_FSGRPCPLAINTEXT=true
-      - EXTERNAL_SERVICE_ONFS_FSCALLERID=inferflow
-      - EXTERNAL_SERVICE_ONFS_FSCALLERTOKEN=test
-      - EXTERNAL_SERVICE_ONFS_FSDEADLINE=5000
-      - EXTERNAL_SERVICE_ONFS_FSBATCHSIZE=100
-      - NUMERIX_CLIENT_V1_HOST=numerix
-      - NUMERIX_CLIENT_V1_PORT=8083
-      - NUMERIX_CLIENT_V1_DEADLINEMS=5000
-      - NUMERIX_CLIENT_V1_PLAINTEXT=true
-      - NUMERIX_CLIENT_V1_AUTHTOKEN=test
+      - ETCD_WATCHER_ENABLED=true
+      - IN_MEMORY_CACHE_SIZE_IN_BYTES=6000000000
+      - NUMERIX_CLIENT_V1_AUTHTOKEN=numerix
       - NUMERIX_CLIENT_V1_BATCHSIZE=100
+      - NUMERIX_CLIENT_V1_DEADLINE_MS=5000
+      - NUMERIX_CLIENT_V1_HOST=numerix
+      - NUMERIX_CLIENT_V1_PLAINTEXT=true
+      - NUMERIX_CLIENT_V1_PORT=8083
+      - APP_ENV=prod
+      - APP_LOG_LEVEL=INFO
+      - APP_NAME=inferflow
+      - APP_PORT=8085
+      - DAG_TOPOLOGY_CACHE_SIZE=500
+      - DAG_TOPOLOGY_CACHE_TTL_SEC=300
+      - EXTERNAL_SERVICE_ONFS_FS_BATCH_SIZE=50
+      - EXTERNAL_SERVICE_ONFS_FS_CALLER_ID=inferflow
+      - EXTERNAL_SERVICE_ONFS_FS_CALLER_TOKEN=inferflow
+      - EXTERNAL_SERVICE_ONFS_FS_GRPC_PLAIN_TEXT=true
+      - EXTERNAL_SERVICE_ONFS_FS_HOST=onfs-api-server
+      - EXTERNAL_SERVICE_ONFS_FS_PORT=8080
+      - EXTERNAL_SERVICE_ONFS_FS_DEAD_LINE=200
+      - EXTERNAL_SERVICE_PREDATOR_PORT=8001
+      - EXTERNAL_SERVICE_PREDATOR_GRPC_PLAIN_TEXT=true
+      - EXTERNAL_SERVICE_PREDATOR_CALLER_ID=inferflow
+      - EXTERNAL_SERVICE_PREDATOR_CALLER_TOKEN=inferflow
+      - METRIC_SAMPLING_RATE=1
     networks:
       - onfs-network
     depends_on:
@@ -503,6 +510,41 @@ services:
       timeout: 10s
       retries: 5
       start_period: 30s
+
+  predator:
+    build:
+      context: ..
+      dockerfile: predator-dummy/Dockerfile
+    container_name: predator
+    ports:
+      - "8001:8001"
+    environment:
+      - PORT=8001
+    networks:
+      - onfs-network
+    healthcheck:
+      test: ["CMD-SHELL", "nc -z localhost 8001 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 10s
+    restart: unless-stopped
+
+  predator-healthcheck:
+    image: alpine:latest
+    container_name: predator-healthcheck
+    networks:
+      - onfs-network
+    depends_on:
+      - predator
+    command: sh -c "apk add --no-cache curl netcat-openbsd && sleep infinity"
+    healthcheck:
+      test: ["CMD", "nc", "-z", "predator", "8001"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 10s
+    restart: "no"
 
   # Optional: Management Tools
   kafka-ui:
