--- a/trufflebox-ui/env.example
+++ b/trufflebox-ui/env.example
@@ -20,7 +20,7 @@ REACT_APP_ENVIRONMENT=production
 # Online Feature Store - Default: enabled
 REACT_APP_ONLINE_FEATURE_STORE_ENABLED=true
 
-# InferFlow (Model Proxy) - Default: disabled
+# InferFlow - Default: disabled
 REACT_APP_INFERFLOW_ENABLED=true
 
 # Numerix - Default: enabled
