--- a/quick-start/docker-compose.yml
+++ b/quick-start/docker-compose.yml
@@ -353,11 +353,14 @@ services:
       - SCYLLA_1_PASSWORD=
       - SCYLLA_1_USERNAME=
       - SCYLLA_ACTIVE_CONFIG_IDS=1
+      - REDIS_FAILOVER_ACTIVE_CONFIG_IDS=4
       - DISTRIBUTED_CACHE_ACTIVE_CONFIG_IDS=2
       - IN_MEMORY_CACHE_ACTIVE_CONFIG_IDS=3
+      - CORS_ORIGINS=http://localhost:3000,http://localhost:8080
       - HORIZON_APP_NAME=horizon
       - NUMERIX_APP_NAME=numerix
       - INFERFLOW_APP_NAME=inferflow
+      - IS_DUMMY_MODEL_ENABLED=true
     networks:
       - onfs-network
     depends_on:
