--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
       go-sdk-changed: ${{ steps.changes.outputs.go-sdk }}
       py-sdk-changed: ${{ steps.changes.outputs.py-sdk }}
       helix-client-changed: ${{ steps.changes.outputs.helix-client }}
+      inferflow-changed: ${{ steps.changes.outputs.inferflow }}
       multiple-components: ${{ steps.check-multiple.outputs.multiple }}
       any-component: ${{ steps.check-any.outputs.any }}
     steps:
@@ -48,6 +49,8 @@ jobs:
               - 'py-sdk/**'
             helix-client:
               - 'helix-client/**'
+            inferflow:
+              - 'inferflow/**'
 
       - name: Check if multiple components changed
         id: check-multiple
@@ -74,6 +77,9 @@ jobs:
           if [ "${{ steps.changes.outputs.helix-client }}" == "true" ]; then
             changed_count=$((changed_count + 1))
           fi
+          if [ "${{ steps.changes.outputs.inferflow }}" == "true" ]; then
+            changed_count=$((changed_count + 1))
+          fi
           
           if [ $changed_count -gt 1 ]; then
             echo "multiple=true" >> $GITHUB_OUTPUT
@@ -84,7 +90,7 @@ jobs:
       - name: Check if any component changed
         id: check-any
         run: |
-          if [ "${{ steps.changes.outputs.horizon }}" == "true" ] || [ "${{ steps.changes.outputs.trufflebox-ui }}" == "true" ] || [ "${{ steps.changes.outputs.numerix }}" == "true" ] || [ "${{ steps.changes.outputs.online-feature-store }}" == "true" ] || [ "${{ steps.changes.outputs.go-sdk }}" == "true" ] || [ "${{ steps.changes.outputs.py-sdk }}" == "true" ] || [ "${{ steps.changes.outputs.helix-client }}" == "true" ]; then
+          if [ "${{ steps.changes.outputs.horizon }}" == "true" ] || [ "${{ steps.changes.outputs.trufflebox-ui }}" == "true" ] || [ "${{ steps.changes.outputs.numerix }}" == "true" ] || [ "${{ steps.changes.outputs.online-feature-store }}" == "true" ] || [ "${{ steps.changes.outputs.go-sdk }}" == "true" ] || [ "${{ steps.changes.outputs.py-sdk }}" == "true" ] || [ "${{ steps.changes.outputs.helix-client }}" == "true" ] || [ "${{ steps.changes.outputs.inferflow }}" == "true" ]; then
             echo "any=true" >> $GITHUB_OUTPUT
           else
             echo "any=false" >> $GITHUB_OUTPUT
@@ -105,6 +111,7 @@ jobs:
           echo "- Go SDK CI: ${{ needs.detect-changes.outputs.go-sdk-changed }}"
           echo "- Python SDK CI: ${{ needs.detect-changes.outputs.py-sdk-changed }}"
           echo "- Helix Client CI: ${{ needs.detect-changes.outputs.helix-client-changed }}"
+          echo "- Inferflow CI: ${{ needs.detect-changes.outputs.inferflow-changed }}"
           echo "This workflow will proceed with integration tests..."
 
   integration-tests:
@@ -124,6 +131,7 @@ jobs:
           echo "Testing Go SDK compatibility with backend services..."
           echo "Testing Python SDK compatibility with backend services..."
           echo "Testing Helix Client compatibility with backend services..."
+          echo "Testing Inferflow compatibility with backend services..."
           # Add actual integration test commands here
 
       - name: Integration Test - Docker Compose
@@ -203,4 +211,5 @@ jobs:
           echo "- Online Feature Store: ${{ needs.detect-changes.outputs.online-feature-store-changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Go SDK: ${{ needs.detect-changes.outputs.go-sdk-changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Python SDK: ${{ needs.detect-changes.outputs.py-sdk-changed }}" >> $GITHUB_STEP_SUMMARY
-          echo "- Helix Client: ${{ needs.detect-changes.outputs.helix-client-changed }}" >> $GITHUB_STEP_SUMMARY 
+          echo "- Helix Client: ${{ needs.detect-changes.outputs.helix-client-changed }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Inferflow: ${{ needs.detect-changes.outputs.inferflow-changed }}" >> $GITHUB_STEP_SUMMARY 
