--- a/quick-start/docker-compose.yml
+++ b/quick-start/docker-compose.yml
@@ -325,8 +325,7 @@ services:
       - "8082:8082"
     environment:
       - APP_NAME=horizon
-      - APP_ENVIRONMENT=PROD
-      - APP_ENV=production
+      - APP_ENV=PROD
       - APP_PORT=8082
       - APP_LOG_LEVEL=DEBUG
       - APP_METRIC_SAMPLING_RATE=1
@@ -356,8 +355,14 @@ services:
       - SCYLLA_1_PASSWORD=
       - SCYLLA_1_USERNAME=
       - SCYLLA_ACTIVE_CONFIG_IDS=1
+      - REDIS_FAILOVER_ACTIVE_CONFIG_IDS=4
       - DISTRIBUTED_CACHE_ACTIVE_CONFIG_IDS=2
       - IN_MEMORY_CACHE_ACTIVE_CONFIG_IDS=3
+      - CORS_ORIGINS=http://localhost:3000,http://localhost:8080
+      - HORIZON_APP_NAME=horizon
+      - NUMERIX_APP_NAME=numerix
+      - INFERFLOW_APP_NAME=inferflow
+      - IS_DUMMY_MODEL_ENABLED=true
     networks:
       - onfs-network
     depends_on:
@@ -446,7 +451,7 @@ services:
       - EXTERNAL_SERVICE_ONFS_FS_CALLER_TOKEN=inferflow
       - EXTERNAL_SERVICE_ONFS_FS_GRPC_PLAIN_TEXT=true
       - EXTERNAL_SERVICE_ONFS_FS_HOST=onfs-api-server
-      - EXTERNAL_SERVICE_ONFS_FS_PORT=8080
+      - EXTERNAL_SERVICE_ONFS_FS_PORT=8089
       - EXTERNAL_SERVICE_ONFS_FS_DEAD_LINE=200
       - EXTERNAL_SERVICE_PREDATOR_PORT=8001
       - EXTERNAL_SERVICE_PREDATOR_GRPC_PLAIN_TEXT=true
@@ -485,9 +490,9 @@ services:
       - REACT_APP_ENVIRONMENT=staging
       - REACT_APP_HORIZON_BASE_URL=http://localhost:8082
       - REACT_APP_ONLINE_FEATURE_STORE_ENABLED=true
-      - REACT_APP_INFERFLOW_ENABLED=false
-      - REACT_APP_NUMERIX_ENABLED=false
-      - REACT_APP_PREDATOR_ENABLED=false
+      - REACT_APP_INFERFLOW_ENABLED=true
+      - REACT_APP_NUMERIX_ENABLED=true
+      - REACT_APP_PREDATOR_ENABLED=true
       - REACT_APP_EMBEDDING_PLATFORM_ENABLED=false
     networks:
       - onfs-network
