--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,7 +24,10 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "${workspaceFolder}/flashring/cmd/flashringtest"
+            "program": "${workspaceFolder}/flashring/cmd/flashringtest",
+            "env": {
+                "PLAN": "readthrough-batched"
+            }
         }
 
     ]
