--- a/java-sdk/onfs/feature-store-flink-connector-sdk-flink1x/pom.xml
+++ b/java-sdk/onfs/feature-store-flink-connector-sdk-flink1x/pom.xml
@@ -57,6 +57,18 @@
 			<version>1.7.36</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- Jackson for JSON parsing -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.2</version>
+		</dependency>
+		<!-- ETCD for metadata mismatch -->
+		<dependency>
+			<groupId>io.etcd</groupId>
+			<artifactId>jetcd-core</artifactId>
+			<version>0.7.7</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
