--- a/java-sdk/onfs/pom.xml
+++ b/java-sdk/onfs/pom.xml
@@ -11,5 +11,6 @@
   <modules>
     <module>feature-store-core</module>
     <module>feature-store-flink-connector-sdk-flink1x</module>
+    <module>onfs-client</module>
   </modules>
 </project>
