--- a/java-sdk/onfs/feature-store-flink-connector-sdk-flink1x/pom.xml
+++ b/java-sdk/onfs/feature-store-flink-connector-sdk-flink1x/pom.xml
@@ -20,6 +20,8 @@
 		<flink-connector-kafka.version>3.3.0-1.20</flink-connector-kafka.version>
 		<kafka.clients.version>3.5.0</kafka.clients.version>
 		<maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
+		<jackson-databind.version>2.15.2</jackson-databind.version>
+		<jetcd-core.version>0.7.7</jetcd-core.version>
 	</properties>
 	<dependencies>
 		<!-- Core module -->
@@ -61,13 +63,13 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.15.2</version>
+			<version>${jackson-databind.version}</version>
 		</dependency>
 		<!-- ETCD for metadata mismatch -->
 		<dependency>
 			<groupId>io.etcd</groupId>
 			<artifactId>jetcd-core</artifactId>
-			<version>0.7.7</version>
+			<version>${jetcd-core.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
