fix: reverted http init in grpc server, and combined cmux in main.go for both grpc and/or http apis, also added deployment files

--- a/online-feature-store/config.yaml
+++ b/online-feature-store/config.yaml
@@ -23,6 +23,7 @@ environment:
             - online-feature-store-consumer-v5
             - online-feature-store-api-secondary-p2p-test
             - online-feature-store-api-nrt
+            - online-feature-store-api-http
     stg:
         deployment_order:
             - online-feature-store-api
