fix: updated service_type flag, removeed extra lines, access viper variable with bool value

--- a/deployments/online-feature-store-api-http.yaml
+++ b/deployments/online-feature-store-api-http.yaml
@@ -13,7 +13,7 @@ priority: p0
 initialDelaySeconds: 60
 service_type:
   - grpc
-  - httpserver
+  - httpstateless
   - database
 environment:
   ftr:
