--- a/rust-caller-new/Cargo.toml
+++ b/rust-caller-new/Cargo.toml
@@ -12,6 +12,7 @@ axum = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tower-http = { version = "0.5", features = ["cors"] }
+pprof = { version = "0.13", features = ["flamegraph", "protobuf"] }
 
 [build-dependencies]
 tonic-build = "0.11"
