--- a/rust-caller-new/Cargo.toml
+++ b/rust-caller-new/Cargo.toml
@@ -12,7 +12,7 @@ axum = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tower-http = { version = "0.5", features = ["cors"] }
-pprof = { version = "0.13", features = ["flamegraph", "protobuf"] }
+# pprof = { version = "0.13", features = ["flamegraph", "protobuf"] }  # Temporarily disabled - API needs fixing
 
 [build-dependencies]
 tonic-build = "0.11"
