--- a/rust-caller-new/Cargo.toml
+++ b/rust-caller-new/Cargo.toml
@@ -14,6 +14,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tower-http = { version = "0.5", features = ["cors"] }
 pprof = { version = "0.15", features = ["flamegraph", "protobuf"] }
+tikv-jemallocator = { version = "0.5", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
+jemalloc-pprof = "0.5"
 
 [build-dependencies]
 tonic-build = "0.11"
