--- a/rust-caller-new/Cargo.toml
+++ b/rust-caller-new/Cargo.toml
@@ -14,8 +14,12 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tower-http = { version = "0.5", features = ["cors"] }
 pprof = { version = "0.15", features = ["flamegraph", "protobuf"] }
-tikv-jemallocator = { version = "0.6", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
+tikv-jemallocator = { version = "0.6.1", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
 jemalloc_pprof = "0.8"
+
+[features]
+default = []
+protobuf = ["pprof/protobuf"]
 
 [build-dependencies]
 tonic-build = "0.11"
