Fixed helm chart

--- a/predator/1.0.0/templates/addon-ports.yaml
+++ b/predator/1.0.0/templates/addon-ports.yaml
@@ -1,5 +1,5 @@
 {{ $dynamicPort := 9000 | int }}
-{{- if or ( eq "contour-internal" .Values.ingress.ingressClassName ) ( eq "contour-external" .Values.ingress.ingressClassName ) ( eq "contour-internal-0" .Values.ingress.ingressClassName ) ( eq "contour-internal-1" .Values.ingress.ingressClassName ) ( eq "contour-external-0" .Values.ingress.ingressClassName ) ( eq "contour-external-1" .Values.ingress.ingressClassName ) }}
+{{- if and .Values.ingress (or ( eq "contour-internal" .Values.ingress.ingressClassName ) ( eq "contour-external" .Values.ingress.ingressClassName ) ( eq "contour-internal-0" .Values.ingress.ingressClassName ) ( eq "contour-internal-1" .Values.ingress.ingressClassName ) ( eq "contour-external-0" .Values.ingress.ingressClassName ) ( eq "contour-external-1" .Values.ingress.ingressClassName )) }}
 {{- range .Values.service.addons }}
 apiVersion: v1
 kind: Service
