--- a/predator/1.0.0/templates/external-secrets.yaml
+++ b/predator/1.0.0/templates/external-secrets.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.externalSecret.enabled }}
+{{- if and .Values.externalSecret .Values.externalSecret.enabled }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -8,10 +8,8 @@ metadata:
   annotations:
 {{ toYaml .Values.externalSecret.annotations | indent 4 }}
 {{- end }}
-  {{- if  .Values.deployment.enabled }}
+  {{- if and .Values.deployment .Values.deployment.enabled }}
   name: {{ .Values.deployment.envFrom.secretRef }}
-  {{- else if .Values.cron.enabled }}
-  name: {{ .Values.cron.envFrom.secretRef }}
   {{- end}}
   namespace: {{ .Values.namespace }}
 spec:
@@ -27,9 +25,7 @@ spec:
   target:
     creationPolicy: Owner
     deletionPolicy: Retain
-    {{- if  .Values.deployment.enabled }}
+    {{- if and .Values.deployment .Values.deployment.enabled }}
     name: {{ .Values.deployment.envFrom.secretRef }}
-    {{- else if .Values.cron.enabled }}
-    name: {{ .Values.cron.envFrom.secretRef }}
     {{- end}}
 {{- end }}
