--- a/predator/1.0.0/templates/otel-secret.yaml
+++ b/predator/1.0.0/templates/otel-secret.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "labels.common" . | nindent 4 }}
   annotations:
     flagger.app/config-tracking: disabled
-  name: {{ .Values.deployment.envFrom.secretRef }}-otel
+  name: {{ if and .Values.deployment .Values.deployment.envFrom }}{{ .Values.deployment.envFrom.secretRef }}{{ else }}{{ .Values.namespace }}{{ end }}-otel
   namespace: {{ .Values.namespace }}
 spec:
   dataFrom:
@@ -20,7 +20,7 @@ spec:
   target:
     creationPolicy: Owner
     deletionPolicy: Retain
-    {{- if  .Values.deployment.enabled }}
+    {{- if and .Values.deployment .Values.deployment.enabled }}
     name: {{ .Values.deployment.envFrom.secretRef }}-otel
     {{- end}}
 {{ end }}
