--- a/predator/1.0.0/templates/jmx-configmap.yaml
+++ b/predator/1.0.0/templates/jmx-configmap.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.jmxconfig.enabled -}}
+{{- if and .Values.jmxconfig .Values.jmxconfig.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
