--- a/predator/1.0.0/templates/pdb.yaml
+++ b/predator/1.0.0/templates/pdb.yaml
@@ -1,5 +1,5 @@
-{{- if or (.Values.podDisruptionBudget.enabled) (.Values.deployment.enabled) }}
-{{- if or ( and (.Values.deployment.enabled) (.Values.autoscaling.enabled) ( gt (int .Values.autoscaling.minReplicas) 1)) ( and (eq .Values.autoscaling.enabled false) ( gt ( int .Values.deployment.replicaCount) 1 )) }}
+{{- if or (and .Values.podDisruptionBudget .Values.podDisruptionBudget.enabled) (and .Values.deployment .Values.deployment.enabled) }}
+{{- if or ( and .Values.deployment (.Values.deployment.enabled) (.Values.autoscaling.enabled) ( gt (int .Values.autoscaling.minReplicas) 1)) ( and (eq .Values.autoscaling.enabled false) .Values.deployment ( gt ( int .Values.deployment.replicaCount) 1 )) }}
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
@@ -12,7 +12,7 @@ spec:
   {{- if .Values.podDisruptionBudget.enabled }}
   maxUnavailable: {{ .Values.podDisruptionBudget.maxUnavailable }}
   {{- else }}
-  {{- if .Values.deployment.enabled }}
+  {{- if and .Values.deployment .Values.deployment.enabled }}
     {{- if (eq .Values.deployment.updateStrategy.strategy.type "RollingUpdate") }}
   maxUnavailable: {{ .Values.deployment.updateStrategy.strategy.rollingUpdate.maxSurge | default "10%" }}
     {{- else }}
