--- a/predator/1.0.0/templates/scaledobject.yaml
+++ b/predator/1.0.0/templates/scaledobject.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.autoscaling.enabled }}
+{{- if and .Values.autoscaling .Values.autoscaling.enabled }}
 apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
