--- a/predator/1.0.0/templates/serviceaccount.yaml
+++ b/predator/1.0.0/templates/serviceaccount.yaml
@@ -1,4 +1,4 @@
-{{- if and (.Values.deployment.enabled ) (.Values.deployment.serviceAccount.enabled)  }}
+{{- if and .Values.deployment (.Values.deployment.enabled) (.Values.deployment.serviceAccount.enabled) }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -8,20 +8,6 @@ metadata:
 {{ include "labels.common" . | indent 4 }}
 {{ include "labels.chart" . | indent 4 }}
   {{- with .Values.deployment.serviceAccount.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-{{- end }}
-{{- if and (.Values.cron) (.Values.cron.enabled ) (.Values.cron.serviceAccount.enabled)  }}
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  namespace: {{ .Values.namespace }}
-  name: {{ .Values.namespace }}
-  labels:
-{{ include "labels.common" . | indent 4 }}
-{{ include "labels.chart" . | indent 4 }}
-  {{- with .Values.cron.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
