--- a/horizon/env.example
+++ b/horizon/env.example
@@ -55,7 +55,7 @@ GCP_PROJECT_ID=your-gcp-project-id-fallback
 # =============================================================================
 # All files will be pushed to the specified repository and branch
 # These are required - the application will fail to start if not set
-REPOSITORY_NAME
+REPOSITORY_NAME=
 BRANCH_NAME=
 
 
