--- a/rust-caller-new/Cargo.toml
+++ b/rust-caller-new/Cargo.toml
@@ -8,11 +8,11 @@ tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "signal"]
 chrono = "0.4"
 tonic = "0.11"
 prost = "0.12"
-tower = "0.4"
-axum = "0.7"
+hyper = { version = "1", features = ["server", "http1", "http2"] }
+hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "http2"] }
+http-body-util = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tower-http = { version = "0.5", features = ["cors"] }
 pprof = { version = "0.15", features = ["flamegraph", "protobuf"] }
 tikv-jemallocator = { version = "0.6.1", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
 jemalloc_pprof = "0.8"
