--- a/rust-caller-new/Cargo.toml
+++ b/rust-caller-new/Cargo.toml
@@ -12,6 +12,8 @@ hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "http2"]
 http-body-util = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+pprof = "0.13"
+jemalloc-pprof = "0.5"
 
 [build-dependencies]
 tonic-build = "0.11"
