--- a/rust-caller-new/Cargo.toml
+++ b/rust-caller-new/Cargo.toml
@@ -13,7 +13,7 @@ http-body-util = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 pprof = "0.13"
-jemalloc-pprof = "0.5"
+jemalloc_pprof = "0.5"
 
 [build-dependencies]
 tonic-build = "0.11"
