--- a/rust-caller-new/Cargo.toml
+++ b/rust-caller-new/Cargo.toml
@@ -12,7 +12,7 @@ hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "http2"]
 http-body-util = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-pprof = "0.13"
+pprof = { version = "0.13", features = ["flamegraph"] }
 jemalloc_pprof = "0.8"
 
 [build-dependencies]
