--- a/rust-caller-new/Cargo.toml
+++ b/rust-caller-new/Cargo.toml
@@ -13,7 +13,7 @@ http-body-util = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 pprof = { version = "0.13", features = ["flamegraph"] }
-jemalloc_pprof = "0.8"
+# jemalloc_pprof = "0.8"  # Commented out - requires jemalloc to be configured as global allocator
 
 [build-dependencies]
 tonic-build = "0.11"
