--- a/predator/1.0.0/templates/deployment.yaml
+++ b/predator/1.0.0/templates/deployment.yaml
@@ -56,7 +56,7 @@ spec:
          - name: local-model-source
            hostPath:
              path: {{ .Values.localModelPath }}
-             type: Directory
+             type: DirectoryOrCreate
          # Shared volume for init container to copy to and main container to use
          - name: shared-volume
            emptyDir: {}
