--- a/predator/1.0.0/templates/canary-contour.yaml
+++ b/predator/1.0.0/templates/canary-contour.yaml
@@ -124,6 +124,8 @@ spec:
       {{- end }}
     {{- end }}
     # Alerts for the above analysis
+    # Only include alerts if AlertProvider exists (i.e., slackWebhookURL is set)
+    {{- if and .Values.canary .Values.canary.slackWebhookURL (ne .Values.canary.slackWebhookURL "") }}
     alerts:
       - name: flagger-status
         providerRef:
@@ -140,6 +142,7 @@ spec:
           name: flagger-status
           namespace: {{ .Values.namespace }}
         severity: info
+    {{- end }}
 ---
 apiVersion: projectcontour.io/v1
 kind: HTTPProxy
