--- a/rust-caller-new/Cargo.toml
+++ b/rust-caller-new/Cargo.toml
@@ -4,19 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+axum = "0.7"
 tokio = { version = "1", features = ["full"] }
-hyper = { version = "1", features = ["server", "http1", "http2"] }
-hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "http2"] }
-http-body-util = "0.1"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 tonic = "0.11"
 prost = "0.12"
 prost-types = "0.12"
+tikv-jemallocator = { version = "0.5", default-features = false }
 
 [build-dependencies]
 tonic-build = "0.11"
-
-
-[workspace]
 
