--- a/rust-caller-new/Cargo.toml
+++ b/rust-caller-new/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 axum = "0.7"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tonic = "0.11"
 prost = "0.12"
 prost-types = "0.12"
+base64 = "0.21"
 tikv-jemallocator = { version = "0.5", default-features = false }
 
 [build-dependencies]
