Added NA check to skip GCS

--- a/quick-start/docker-compose.yml
+++ b/quick-start/docker-compose.yml
@@ -396,8 +396,8 @@ services:
       # Mounts host's gcloud credentials for ADC authentication
       # Container runs as non-root user (nonroot), so mount to /home/nonroot/.config/gcloud
       - CLOUDSDK_CONFIG=/home/nonroot/.config/gcloud
-      - TEST_DEPLOYABLE_ID=3
-      - TEST_GPU_DEPLOYABLE_ID=3
+      - TEST_DEPLOYABLE_ID=3021
+      - TEST_GPU_DEPLOYABLE_ID=3021
     volumes:
       - ./configs:/app/configs:ro
       # Mount gcloud credentials for Application Default Credentials (ADC)
@@ -470,6 +470,12 @@ services:
     container_name: inferflow
     ports:
       - "8085:8085"
+    extra_hosts:
+      # Allow inferflow to reach K8s services via host port-forward
+      # Use: kubectl -n prd-predator port-forward svc/prd-predator 8090:80
+      - "predator.prd.meesho.int:host-gateway"
+      # Add more services as needed:
+      # - "another-service.prd.meesho.int:host-gateway"
     environment:
       - APP_GC_PERCENTAGE=1
       - ETCD_SERVER=http://etcd:2379
@@ -494,7 +500,10 @@ services:
       - EXTERNAL_SERVICE_ONFS_FS_HOST=onfs-api-server
       - EXTERNAL_SERVICE_ONFS_FS_PORT=8089
       - EXTERNAL_SERVICE_ONFS_FS_DEAD_LINE=200
-      - EXTERNAL_SERVICE_PREDATOR_PORT=8001
+      # Predator config: Port must match K8s service port 80 (not targetPort 8001)
+      # Since we forward localhost:8090 -> K8s service:80 -> pod:8001
+      # The model endpoint in etcd must be configured as: predator.prd.meesho.int:8090
+      - EXTERNAL_SERVICE_PREDATOR_PORT=8090
       - EXTERNAL_SERVICE_PREDATOR_GRPC_PLAIN_TEXT=true
       - EXTERNAL_SERVICE_PREDATOR_CALLER_ID=inferflow
       - EXTERNAL_SERVICE_PREDATOR_CALLER_TOKEN=inferflow
