--- a/rust-caller-new/Cargo.toml
+++ b/rust-caller-new/Cargo.toml
@@ -8,17 +8,20 @@ axum = "0.7"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tonic = "0.11"
-prost = "0.12"
-prost-types = "0.12"
+tonic = "0.14"
+tonic-prost = "0.14"
+prost = "0.14"
+prost-types = "0.14"
 base64 = "0.21"
 quinn = "0.11"
 rustls = "0.23"
 rustls-pemfile = "2.0"
 rustls-native-certs = "0.6"
 clap = { version = "4", features = ["derive"] }
+http = "1.0"
+h3-quinn = "0.0"
 tonic-h3 = { git = "https://github.com/youyuanwu/tonic-h3.git", default-features = false, features = ["quinn"] }
 
 [build-dependencies]
-tonic-build = "0.11"
+tonic-prost-build = "0.14"
 
