--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ trufflebox-ui/node_modules/
 dist/
 .env*
 .idea/
+.vscode/
 workspace/
 __pycache__/
 java-sdk/onfs/feature-store-client/target/
@@ -16,4 +17,4 @@ java-sdk/onfs/feature-store-core/target/
 .go.mod.appended
 horizon/pem/*.pem
 horizon/pem/*.key
-horizon/configs/
+horizon/configs/*.pem
