--- a/java-sdk/onfs/feature-store-flink-connector-sdk-flink1x/pom.xml
+++ b/java-sdk/onfs/feature-store-flink-connector-sdk-flink1x/pom.xml
@@ -20,6 +20,8 @@
 		<flink-connector-kafka.version>3.3.0-1.20</flink-connector-kafka.version>
 		<kafka.clients.version>3.5.0</kafka.clients.version>
 		<maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
+		<jackson-databind.version>2.15.2</jackson-databind.version>
+		<jetcd-core.version>0.7.7</jetcd-core.version>
 	</properties>
 	<dependencies>
 		<!-- Core module -->
@@ -56,6 +58,18 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.36</version>
 			<scope>provided</scope>
+		</dependency>
+		<!-- Jackson for JSON parsing -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson-databind.version}</version>
+		</dependency>
+		<!-- ETCD for metadata mismatch -->
+		<dependency>
+			<groupId>io.etcd</groupId>
+			<artifactId>jetcd-core</artifactId>
+			<version>${jetcd-core.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
